--- a/_posts/2008-12-31-upgrading-ubuntu-after-eol.html
+++ b/_posts/2008-12-31-upgrading-ubuntu-after-eol.html
@@ -20,7 +20,7 @@ E: Some index files failed to download, they have been ignored, or old ones used
 <p>To correctly upgrade, I did as follows:</p>
 {% highlight text %}
 # sed -ie 's#us.archive.ubuntu.com#old-releases.ubuntu.com#' /etc/apt/sources.list
-# apt-get update &amp;&amp; apt-get upgrade -y
+# apt-get update && apt-get upgrade -y
 {% endhighlight %}
 <p>Apt should correctly update all packages to your EOLed release's final version. When that was done, I was ready to upgrade to Gutsy. The upgrade manager the Ubuntu folks have come up with is pretty slick, but doesn't take into account that you might be running an apt mirror that doesn't also serve the version of the distro you're upgrading to. Oops. Getting it sorted isn't that big a deal. I started it.</p>
 <p>Then, when prompted for information about my mirrors, I backgrounded do-release-upgrade with C-z and fixed my source.list again, this time to reflect a repository that was invalid for Feisty, but valid for Gutsy:<br />
