--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@ title: Home
       <a href="https://www.linkedin.com/in/-{{ site.linkedin_username}}">LinkedIn</a>
       <span class="separator">•</span>
       <a href="https://x.com/[{ site.twitter_username }}">X</a>
+      <span class="separator">•</span>
+      <a id="link-interaction" rel="nofollow, noindex" href="to-andreas/">email</a>
     </div>
   </div>
 </main>
