--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ title: Home
       <p>I'm currently helping the City of Oslo take better advantage of technology in service delivery to our residents as part of the City's agency for digital transformation, Oslo Origo. This involves figuring out where integrating software with our services has the most potential, building a strong developer community that shares knoweledge and experience, and working to make technology an enabler of continuous development for the City.</p>
     </p>
     <div class="home-links">
-      You can find me online at the usual places
+      You can find me on the internet
       <a href="https://github.com/{{ site.github_username}}">GitHub</a>
       <span class="separator">•</span>
       <a href="https://www.linkedin.com/in/-{{ site.linkedin_username}}">LinkedIn</a>
