Tune text and add link to old blogposts

--- a/index.html
+++ b/index.html
@@ -11,19 +11,23 @@ title: Home
     </p>
     <p class="home-description">
       <p>
-        Hello there! I'm an engineering leader that values learning, intellectual honesty and missions that shape society for the better.</p>
+        Hello there! I'm Andreas and I'm into learning, intellectual honesty and missions that shape society for the better.</p>
 
       <p>I'm currently helping the City of Oslo take better advantage of technology in service delivery to our residents as part of the City's agency for digital transformation, Oslo Origo. This involves figuring out where integrating software with our services has the most potential, building a strong developer community that shares knoweledge and experience, and working to make technology an enabler of continuous development for the City.</p>
     </p>
+    <div class="home-description">
+      <p>A long time ago I wrote some <a href="{{ '/distraction' | relative_url }}">blogposts</a>.</p>
+    </div>
     <div class="home-links">
-      You can find me on the internet
-      <a href="https://github.com/{{ site.github_username}}">GitHub</a>
-      <span class="separator">•</span>
-      <a href="https://www.linkedin.com/in/-{{ site.linkedin_username}}">LinkedIn</a>
-      <span class="separator">•</span>
-      <a href="https://x.com/[{ site.twitter_username }}">X</a>
-      <span class="separator">•</span>
-      <a id="link-interaction" rel="nofollow, noindex" href="to-andreas/">email</a>
+      <p>You can find me on the internet
+        <a href="https://github.com/{{ site.github_username}}">GitHub</a>
+        <span class="separator">•</span>
+        <a href="https://www.linkedin.com/in/-{{ site.linkedin_username}}">LinkedIn</a>
+        <span class="separator">•</span>
+        <a href="https://x.com/[{ site.twitter_username }}">X</a>
+        <span class="separator">•</span>
+        <a id="link-interaction" rel="nofollow, noindex" href="to-andreas/">email</a>
+      </p>
     </div>
   </div>
 </main>
