--- a/index.html
+++ b/index.html
@@ -18,16 +18,15 @@ title: Home
     <div class="home-description">
       <p>A long time ago I wrote some <a href="{{ '/distraction' | relative_url }}">blogposts</a>.</p>
     </div>
+
     <div class="home-links">
-      <p>You can find me on the internet
-        <a href="https://github.com/{{ site.github_username}}">GitHub</a>
-        <span class="separator">•</span>
-        <a href="https://www.linkedin.com/in/-{{ site.linkedin_username}}">LinkedIn</a>
-        <span class="separator">•</span>
-        <a href="https://x.com/[{ site.twitter_username }}">X</a>
-        <span class="separator">•</span>
-        <a id="link-interaction" rel="nofollow, noindex" href="to-andreas/">email</a>
-      </p>
+      <p>You can find me on the internet:</p>
+      <ul>
+        <li><a href="https://github.com/{{ site.github_username}}">GitHub</a></li>
+        <li><a href="https://www.linkedin.com/in/-{{ site.linkedin_username}}">LinkedIn</a></li>
+        <li><a href="https://x.com/{{ site.twitter_username }}">X</a></li>
+        <li><a id="link-interaction" rel="nofollow, noindex" href="to-andreas/">Email</a></li>
+      </ul>
     </div>
   </div>
 </main>
