Make a hero section at the top of the mainpage

--- a/index.html
+++ b/index.html
@@ -4,11 +4,15 @@ title: Home
 ---
 
 <main class="home">
+  <div class="hero-section">
+    <div class="hero-content">
+      <h1>Andreas Jacobsen</h1>
+      <p class="hero-subtitle">Software Developer, Architect and CTO</p>
+      <p class="hero-description">Lorem ipsum dolor.</p>
+    </div>
+  </div>
+
   <div class="home-content">
-    <h1>Andreas Jacobsen</h1>
-    <p class="home-subtitle">
-      Software developer, architect and CTO
-    </p>
     <p class="home-description">
       <p>
         Hello there! I'm Andreas and I'm into learning, intellectual honesty and missions that shape society for the better.</p>
@@ -24,7 +28,7 @@ title: Home
       <ul>
         <li><a href="https://github.com/{{ site.github_username}}">GitHub</a></li>
         <li><a href="https://www.linkedin.com/in/-{{ site.linkedin_username}}">LinkedIn</a></li>
-        <li><a href="https://x.com/{{ site.twitter_username }}">X</a></li>
+        <li><a href="https://x.com/{{ site.twitter_username }}">X</a> / <a href="https://bluesky.com/profile/{{ site.bluesky_username }}">Bluesky</a></li>
         <li><a id="link-interaction" rel="nofollow, noindex" href="to-andreas/">Email</a></li>
       </ul>
     </div>
