--- a/index.html
+++ b/index.html
@@ -8,16 +8,15 @@ title: Home
     <div class="hero-content">
       <h1>Andreas Jacobsen</h1>
       <p class="hero-subtitle">Software Developer, Architect and CTO</p>
-      <p class="hero-description">Lorem ipsum dolor.</p>
+      <p class="hero-description">Hello there 👋</p>
     </div>
   </div>
 
   <div class="home-content">
     <p class="home-description">
-      <p>
-        Hello there! I'm Andreas and I'm into learning, intellectual honesty and missions that shape society for the better.</p>
+      <p>I'm into learning, intellectual honesty and missions that shape society for the better.</p>
 
-      <p>I'm currently helping the City of Oslo take better advantage of technology in service delivery to our residents as part of the City's agency for digital transformation, Oslo Origo. This involves figuring out where integrating software with our services has the most potential, building a strong developer community that shares knoweledge and experience, and working to make technology an enabler of continuous development for the City.</p>
+      <p>Currently, I'm helping the City of Oslo take better advantage of technology in service delivery to our residents as part of the City's agency for digital transformation, Oslo Origo. This involves figuring out where integrating software with our services has the most potential, building a strong developer community that shares knoweledge and experience, and working to make technology an enabler of continuous development for the City.</p>
     </p>
     <div class="home-description">
       <p>A long time ago I wrote some <a href="{{ '/distraction' | relative_url }}">blogposts</a>.</p>
