--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ title: Home
   <div class="hero-section">
     <div class="hero-content">
       <h1>Andreas Jacobsen</h1>
-      <p class="hero-subtitle">Software Developer, Architect and CTO</p>
+      <p class="hero-subtitle">Software engineering leader</p>
       <p class="hero-description">Hello there 👋</p>
     </div>
   </div>
