Deduplicate social media list and extract logos

--- a/index.html
+++ b/index.html
@@ -24,12 +24,7 @@ title: Home
 
     <div class="home-links">
       <p>You can find me on the internet:</p>
-      <ul>
-        <li><a href="https://github.com/{{ site.github_username}}">GitHub</a></li>
-        <li><a href="https://www.linkedin.com/in/-{{ site.linkedin_username}}">LinkedIn</a></li>
-        <li><a href="https://x.com/{{ site.twitter_username }}">X</a> / <a href="https://bluesky.com/profile/{{ site.bluesky_username }}">Bluesky</a></li>
-        <li><a id="link-interaction" rel="nofollow, noindex" href="to-andreas/">Email</a></li>
-      </ul>
+      {% include socialmedia.html %}
     </div>
   </div>
 </main>
