--- a/index.html
+++ b/index.html
@@ -19,9 +19,11 @@ title: Home
       <p>Currently, I'm helping the City of Oslo take better advantage of technology in service delivery to our residents as part of the City's agency for digital transformation, Oslo Origo. This involves figuring out where integrating software with our services has the most potential, building a strong developer community that shares knoweledge and experience, and working to make technology an enabler of continuous development for the City.</p>
     </p>
     <div class="home-description">
+      <p>Here's some <a href="{{ '/talks' | relative_url }}">public speaking</a> I've done.</p>
+    </div>
+    <div class="home-description">
       <p>A long time ago I wrote some <a href="{{ '/distraction' | relative_url }}">blogposts</a>.</p>
     </div>
-
     <div class="home-links">
       <p>You can find me on the internet:</p>
       {% include socialmedia.html %}
