Add identity to hero section on talks

--- a/talks.html
+++ b/talks.html
@@ -5,7 +5,8 @@ title: Home
 <main class="talks">
   <div class="hero-section">
     <div class="hero-content">
-      <h1>Talks</h1>
+      <h1>Andreas Jacobsen</h1>
+      <p class="hero-subtitle">Talks</p>
     </div>
   </div>
 
@@ -32,6 +33,6 @@ title: Home
         2010 JavaZone -
         Time-travel and logging
       </li>
-      </ul>
+    </ul>
   </div>
 </main>
