--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ title: Home
       <p>A long time ago I wrote some <a href="{{ '/distraction' | relative_url }}">blogposts</a>.</p>
     </div>
     <div class="home-links">
-      <p>I enjoy talking about digital transformation and engineering strategy, devops, developer community building and technical leadership. If you do too, you can find me on the internet:</p>
+      <p>I enjoy talking about digital transformation and engineering strategy,  technical leadership, developer community building, and devops. If you do too, you can find me on the internet:</p>
       {% include socialmedia.html %}
     </div>
   </div>
